<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tvPista"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/pista"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tvNumVueltas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/num_vueltas"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvPista"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tvLongitud"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/longitud"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvNumVueltas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tvCurvas"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/num_curvas"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvLongitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tvPais"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/pais"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvCurvas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/tvCiudad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/ciudad"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvPais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCiudad"/>

    <Button
        android:id="@+id/btnNumTracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/num_tracks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>